--- a/.github/workflows/run_action.yml
+++ b/.github/workflows/run_action.yml
@@ -1,62 +1,27 @@
-# name: Run CI
+name: Run CI
 
-# on:
-#   push:
-#     branches: 
-#       - master
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Check out repository code
-#     - uses: actions/checkout@v3
-#     - name: Set up Python ${{ matrix.python-version }}
-#       uses: actions/setup-python@v3
-#       with:
-#         python-version: ${{ matrix.python-version }}
-#     - name: Install Dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install coverage 
-#         pip install flake8
-#     - name: Lint with flake8
-#       run: flake8 --count ./statistics.py
-#     - name: Run Tests
-#       run: |
-#         coverage run -m unittest test_statistics.py
-#         coverage 
-name: "Run Python application"
-
-on: 
+on:
   push:
-    branches:
+    branches: 
       - master
 
-permissions:
-  contents: read
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Lint with flake8
-        run: flake8 --count ./statistics.py
-      - name: Test with unittest
-        run: coverage run -m unittest
-      - name: Upload reports to Codecov
-        uses: codecov/codecov-action@v3
+    - name: Check out repository code
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install coverage 
+        pip install flake8
+    - name: Lint with flake8
+      run: flake8 --count ./statistics.py
+    - name: Run Tests
+      run: |
+        coverage run -m unittest test_statistics.py
