--- a/.github/workflows/run_action.yml
+++ b/.github/workflows/run_action.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
       with:
         python-version: "3.10"
     - name: Install Dependencies
